1) React warning fix 2) Layout horizontal scroll fix

--- a/src/components/Contacts/Contacts.css
+++ b/src/components/Contacts/Contacts.css
@@ -1,11 +1,10 @@
 .contact + .contact:before {
   content: '';
   background-color:#C9C8CD;
-  width: 100%;
   height: 1px;
   position: absolute;
   top: 0px;
-  margin-left: 60px;
+  width: calc(100% - 70px);
 }
 
 .contact + .contact_large:before {
@@ -17,5 +16,6 @@
 }
 
 .contact + .contact_small:before {
+  width: calc(100% - 52px);  
   margin-left: 52px;
 }
